--- a/package.json
+++ b/package.json
@@ -11,26 +11,21 @@
         "Programming Languages"
     ],
     "activationEvents": [
-        "onCommand:extension.sayHello",
-        "onCommand:extension.sayHey"
+        "onCommand:extension.sendMXScriptFile"
     ],
     "main": "./out/extension",
     "contributes": {
         "keybindings": [
             {
-                "command": "extension.sayHello",
+                "command": "extension.sendMXScriptFile",
                 "key": "ctrl+e",
                 "when": "editorTextFocus"
             }
         ],
         "commands": [
             {
-                "command": "extension.sayHello",
+                "command": "extension.sendMXScriptFile",
                 "title": "Hello World3"
-            },
-            {
-                "command": "extension.sayHey",
-                "title": "Hey Silkroad"
             }
         ],
         "languages": [
@@ -66,5 +61,9 @@
         "eslint": "^4.11.0",
         "@types/node": "^7.0.43",
         "@types/mocha": "^2.2.42"
+    },
+    "dependencies": {
+        "ffi": "^2.2.0",
+        "ref": "^1.3.5"
     }
 }
