--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "version": "0.0.1",
     "publisher": "ArvinLee",
     "engines": {
-        "vscode": "^1.24.0"
+        "vscode": "^1.24.1"
     },
     "categories": [
         "Programming Languages"
@@ -25,7 +25,7 @@
         "commands": [
             {
                 "command": "extension.sendMXScriptFile",
-                "title": "Hello World3"
+                "title": "Send MXScript File"
             }
         ],
         "languages": [
@@ -63,7 +63,10 @@
         "@types/mocha": "^2.2.42"
     },
     "dependencies": {
+        "ctypes": "0.0.1",
         "ffi": "^2.2.0",
-        "ref": "^1.3.5"
+        "ref": "^1.3.5",
+        "win32-api": "^3.0.1",
+        "win32-def": "^2.1.1"
     }
 }
