--- a/package.json
+++ b/package.json
@@ -63,11 +63,11 @@
         "@types/mocha": "^2.2.42"
     },
     "dependencies": {
-        "ctypes": "0.0.1",
         "ffi": "^2.2.0",
         "iconv-lite": "^0.4.23",
         "ref": "^1.3.5",
         "win32-api": "^3.0.1",
-        "win32-def": "^2.1.1"
+        "win32-def": "^2.1.1",
+        "winapi": "^2.6.0"
     }
 }
