--- a/package.json
+++ b/package.json
@@ -10,6 +10,14 @@
     "categories": [
         "Programming Languages"
     ],
+    "keywords": [
+        "max",
+        "script",
+        "ms",
+        "mcr",
+        "mse"
+    ],
+    "preview": true,
     "activationEvents": [
         "onCommand:extension.sendMXScriptFile"
     ],
@@ -17,9 +25,14 @@
     "contributes": {
         "keybindings": [
             {
-                "command": "extension.sendMXScriptFile",
                 "key": "ctrl+e",
-                "when": "editorLangId == maxscript"
+                "command": "extension.sendMXScriptFile",     
+                "when": "editorLangId == maxscript" 
+            },
+            {
+                "key": "ctrl+e",
+                "command": "extension.sendMXScriptFile",
+                "when": "editorLangId == python"
             }
         ],
         "commands": [
@@ -54,6 +67,10 @@
     "scripts": {
         "postinstall": "node ./node_modules/vscode/bin/install",
         "test": "node ./node_modules/vscode/bin/test"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/Angevill/CodeTo3dsmax.git"
     },
     "devDependencies": {
         "typescript": "^2.6.1",
